# open-editions.org

./: .gitignore  .gitmodules  .netlify.toml  Editions.hs  Main.hs  Makefile  README.md  README.org  XML2HTML.hs  config.json  default.nix  elm.js  elm.json  flake.nix  hie.yaml  index.html  open-editions-org.cabal  open-editions.cabal  open-editions.nix  repo-list.elm  shell.nix  site.hs  xml.elm
.github/workflows/: deploy.yaml  main.yml  nix.yaml
_layouts/: Elmstatic.elm  Page.elm  Post.elm
_pages/: about.md  contribute.md  contributing.md
_site/: rss.xml
_site/2019-01-02-another-post/: index.html
_site/about/: index.html
_site/contact/: index.html
_site/posts/: index.html
_site/posts/2019-01-01-using-elmstatic/: index.html
_site/tags/other/: index.html
_site/tags/software/: index.html
content/: #contributing.md#  about.md  contact.md  contributing.md  docs.md
criticism-analysis/: analyze-matches.ipynb  default.nix  do-matching.py  fw-matches.csv  insert-matches.py  matches-html.csv  matchesToAnnotations.org
criticism-analysis/website/: annotations.w3c.json  finnegans-wake-corrected.html
criticism-analysis/website/testing/: chunk_0.json  chunk_1.json  (+20 more)
css/: styles.hs
dest/about/: index.html
dest/contact/: index.html
dest/contributing/: index.html
dest/texts/: index.html
docs/: index.html
elm-stuff/0.19.0/: Elmstatic.elmi  Elmstatic.elmo  Page.elmi  Page.elmo  Post.elmi  Post.elmo  Posts.elmo  Styles.elmi  Styles.elmo  Tag.elmi  Tag.elmo
src/: Editions.hs  Main.hs  XML2HTML.hs  about.md  contact.md  contribute.md  contributing.md  docs.md  texts.md
