cabal-version: 2.4
name: open-editions-org
version: 0.1.0.0
license: BSD-3-Clause
maintainer: jon.reeve@gmail.com
author: Jonathan Reeve
category: Web

executable open-editions-org
    main-is: Main.hs
    default-language: Haskell2010
    other-modules:
        Editions
    build-depends:
        base,
        aeson,
        clay,
        containers,
        lucid -any,
        path,
        PyF,
        rib,
        shake -any,
        text,
        xml-conduit
